# datatoolbox

./: .gitignore  Readme.md  fit_general_poly_model.py  fit_spline_model.py  pyproject.toml  standard_error_based_CI_note.py  test_fit_general_poly_model.py
datatoolbox/: __init__.py  fit_linear_sklearn_model.py
